History
=======


0.7.2 (unreleased)
------------------

- Added z3c.autoinclude-entrypoint to mark this as a Plone-plugin. This avoids 
  the need to explicitly load the zcml-slug. 
  [WouterVH]

- Fixed ImportErrors when zope.app.intid is not available but only
  zope.intid.
  [maurits]

- Added empty English translation, needed in corner cases with sites
  that support multiple languages.
  [maurits]

- Added Italian translations.
  Refs https://bugs.launchpad.net/singing-dancing/+bug/466764
  [andrea-cecchi85]

- Add IJob interface and let Job implements it.
  [toutpt]

- Fix for plone 4.3 
  [kiorky].


0.7.1 (2010-12-03)
------------------

- Added ``keep_sent_messages`` flag on channels which, if set to
  ``False`` (the default), suppresses the behavior which would
  otherwise put sent messages into a persistent queue.

  If sent messages are dropped (as per this flag), an entry is instead
  written to the log to keep a minimal record of events.
  [malthe]


0.7.0 (2010-11-04)
-------------------

- Moved z3c widget template registration for radio buttons and checkboxes 
  from ``browser/configure.zcml`` into ``widgets.zcml`` because every version 
  of z3c.form after 2.3.3 includes these template registrations and double 
  registration raises ConfigurationConflictError.  [saily] 


0.6.15 (2010-08-01)
-------------------

- import zope.app.container.interfaces; this helps for Plone 4
  compatibility.
  [maurits]

- strange issue with equality of scheduler objects adressed.
  This seems to only be an issue in python 2.6.
  This should probably be released soon since it fixes a lot
  of bugs in the ForPloneFour branch of dancing.
  [tmog]
  
- Norwegian translation. [regebro]


0.6.14 (2010-04-07)
-------------------

- Update Dutch translation.
  [maurits]

- Update French translation
  [toutpt]


0.6.13 (2009-10-19)
-------------------

- API change! Added boolean "subscribeable" to IChannel.
  [tmog]

- Added Brazilian translation 
  [lucmult]

